{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 5,
  "lineage": "c9ec39f4-4976-9eb8-d778-3f2957e28063",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-02de23da54e2cf967",
            "description": "Security Group with no inbound rules",
            "filter": null,
            "id": "sg-02de23da54e2cf967",
            "name": "ctb_web_server_identifier_sg",
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-068f2d849050e78c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "default_for_az": false,
            "id": "subnet-068f2d849050e78c6",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0bb186a747ac3bbcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "default_for_az": false,
            "id": "subnet-0bb186a747ac3bbcd",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_2"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-02be892a2052a5208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "default_for_az": false,
            "id": "subnet-02be892a2052a5208",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_3"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0f20c5c02dca882c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/23",
            "default_for_az": false,
            "id": "subnet-0f20c5c02dca882c9",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_4"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-053c17c325f712d62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.8.0/23",
            "default_for_az": false,
            "id": "subnet-053c17c325f712d62",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_5"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-087d7fbe1ea1fdfa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/23",
            "default_for_az": false,
            "id": "subnet-087d7fbe1ea1fdfa2",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_6"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cloudtechbitsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:vpc/vpc-0343a657f63b9eb37",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f38a9b9a32eddfc0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c60b46be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0343a657f63b9eb37",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0e092d227b0bef6c1",
            "ipv6_cidr_block": "2600:1f18:c8d:1800::/56",
            "main_route_table_id": "rtb-06407e79393503fef",
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "Cloud Tech Bits"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctb_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0f103feb1ea2d869d",
            "description": "Security Group for DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f103feb1ea2d869d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02de23da54e2cf967"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ctb_db_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctb_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0343a657f63b9eb37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ctb_web_server_identifier",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    }
  ]
}